增加类型
