# src/main/java/cn/irez/doc/model/dto/UserDto.java
@@ -1,0 +1,14 @@
+package cn.irez.doc.model.dto;
+
+import lombok.Data;
+
+import java.util.List;
+
+@Data
+public class UserDto {
+    /** 班级Id */
+    private Integer classId;
+
+    /** 学生名称 */
+    private List<String> nameList;
+}
